- 0004495: [bugtracker] Warning in bug_actiongroup_page.php when risolving (thraxisp)
- 0004426: [email] Email notifications to users with language set to "auto" causes errors (thraxisp)
- 0004448: [email] Custom severity and status shown in mail as code (thraxisp)
- 0004480: [email] admin/check.php - Check email failing. (thraxisp)
- 0004463: [graph] pie chart of summary graph per category wrong when viewing allprojects (thraxisp)
- 0004464: [graph] Pie graphs display as error if no issue exist for a specific project (thraxisp)
- 0004511: [graph] Summary Graph "Cumulative by Date" is blank (process expires) (thraxisp)
- 0004507: [graph] No time-line in the summary for cumulative by days (thraxisp)
- 0004429: [localization] Slovene national characters not displayed correctly (Jeroen Latour)
- 0004423: [localization] Parse error in strings_hungarian.txt line 974 (Victor Boctor)
- 0004509: [localization] Request rather than "Provide Feedback to Issue" (thraxisp)
- 0004431: [relationships] Relationship removal is always "duplicate of" in history (masc)
- 0004435: [other] Auto-preview of attached images is broken (Victor Boctor)
- 0004478: [upgrade] database upgrade from 0.18.3 problem: upgrade-ID "filters-db1" does not work on mySQL4.1.3b-beta (Jeroen Latour)
- Updated Italian, French, Portuguese Brazil, Lithuanian, Korean, Czech, Swedish, Spanish, German and Dutch translations

2004.08.28  -  0.19.0rc1

This is the first release candidate for 0.19.0, it requires database upgrade.  We consider this release considerably more stable than the 0.19.0a2.  This is a feature complete release, hence, 0.19.0 is not expected to include new features, but only bug fixes.

- 0002416: [security] Block Denied Access (masc)
- 0003540: [security] Arbitrary code execution through uploads (thraxisp)
- 0004062: [security] Multiple Cross Site Scripting Vulnerabilities (Victor Boctor)
- 0004063: [security] Possible E-Mail Bomber (masc)
- 0004183: [security] another xss issue (Narcissus)